--- a/MrNugs/MrNugs/MrNugs.vcxproj.filters
+++ b/MrNugs/MrNugs/MrNugs.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Item.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Special.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Item.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Special.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
