Defeat state, new enemy.
If player dies, they can either retry battle or load last save.

NEW ENEMY: Dino Nugget Rider
* Bite Attack - causes bleed
* Tail Swipe - causes stun
* Spear Throw - causes heavy damage

--- a/MrNugs/MrNugs/MrNugs.vcxproj
+++ b/MrNugs/MrNugs/MrNugs.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="Battle.h" />
     <ClInclude Include="Campaign.h" />
+    <ClInclude Include="DinoNuggetRider.h" />
     <ClInclude Include="FriendlyNuggetGuard.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Item.h" />
@@ -169,6 +170,7 @@
   <ItemGroup>
     <ClCompile Include="Battle.cpp" />
     <ClCompile Include="Campaign.cpp" />
+    <ClCompile Include="DinoNuggetRider.cpp" />
     <ClCompile Include="FriendlyNuggetGuard.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Item.cpp" />
