Classes, Status Effects
* Warrior Class Finished
1. Bloodshed - "Hack and slash at the enemy with two powerful swings, injuring anyone who dares stand in your way."
2. Shield Bash - "Strike the enemies head with an intense swipe of your shield. Chance to cause stun."
3. Last Stand - "A lethal attack that becomes stronger the more damaged you are."
---------------------------------------
* Mage Class Finished
1. Misery's End - "An enormous ball of raw, unfiltered energy. Damage scales with current MP."
2. Drain Touch - "Steal MP from an unsuspecting victim. MP gained scales with the victim's MAX MP."
3. Delerium - "Confuses an enemy, resulting in them targeting anyone but you, including themself."
---------------------------------------
* New Status Effects
1. Poison - Smaller bleed, must be cured
2. Confusion - Causes enemies to target anyone other than player, including themselves.

--- a/MrNugs/MrNugs/MrNugs.vcxproj
+++ b/MrNugs/MrNugs/MrNugs.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="FriendlyNuggetGuard.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="Mage.h" />
     <ClInclude Include="NuggetGuard.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="FriendlyNuggetGuard.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Mage.cpp" />
     <ClCompile Include="NuggetGuard.cpp" />
     <ClCompile Include="MrNugs.cpp" />
     <ClCompile Include="pch.cpp">
