Thief, Archer, Ally AI
---------------------------------------------------------------
New Class - Thief

1. Transfix - Pierce your enemy with a sharp blade, inflicting the bleeding status effect.

2. Steal - Rob your enemy of extra gold, (and in rare cases, items) while dealing moderate damage.

3. Toxic Fangs - Steal a portion of your enemies HP. Causes the poison status effect.
---------------------------------------------------------------

---------------------------------------------------------------
New Class - Archer

1. Critical Strike - Pierce thy enemies heart. Or something else important. Either way, it's gonna hurt.

2. Arrow of ??? - Shoot the enemy with a random arrow, causes a random status effect.

3. Arrow Rain - Rain a volley of arrows upon all of your enemies! Your target gets hit twice!
---------------------------------------------------------------

---------------------------------------------------------------
Ally AI fully functional + targetable.

Status effects in info
---------------------------------------------------------------

--- a/MrNugs/MrNugs/MrNugs.vcxproj
+++ b/MrNugs/MrNugs/MrNugs.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Archer.h" />
     <ClInclude Include="Battle.h" />
     <ClInclude Include="Campaign.h" />
     <ClInclude Include="DinoNuggetRider.h" />
@@ -164,11 +165,13 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="Shop.h" />
     <ClInclude Include="Special.h" />
+    <ClInclude Include="Thief.h" />
     <ClInclude Include="Unit.h" />
     <ClInclude Include="Warrior.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Archer.cpp" />
     <ClCompile Include="Battle.cpp" />
     <ClCompile Include="Campaign.cpp" />
     <ClCompile Include="DinoNuggetRider.cpp" />
@@ -187,6 +190,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Shop.cpp" />
     <ClCompile Include="Special.cpp" />
+    <ClCompile Include="Thief.cpp" />
     <ClCompile Include="Unit.cpp" />
     <ClCompile Include="Warrior.cpp" />
     <ClCompile Include="Weapon.cpp" />
