--- a/MrNugs/MrNugs/MrNugs.vcxproj.filters
+++ b/MrNugs/MrNugs/MrNugs.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClInclude Include="Mage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Thief.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Archer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -111,6 +117,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Mage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Thief.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Archer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
